// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Autocomplete > customizations > should allow the button to be customized through the clearButtonProps 1`] = `
<button
  aria-label="Close"
  class="rmd-button rmd-button--text rmd-interaction-surface rmd-autocomplete__clear-button custom-class-name"
  id="autocomplete-clear-_r_129_"
  tabindex="-1"
  type="button"
>
  <kbd>
    esc
  </kbd>
</button>
`;

exports[`Autocomplete > customizations > should allow the dropdown button to be customized 1`] = `
<button
  aria-controls="autocomplete-_r_12k_"
  aria-expanded="false"
  aria-label="Show Fruits"
  class="rmd-button rmd-button--icon rmd-interaction-surface rmd-autocomplete__dropdown-button custom-class-name"
  id="autocomplete-dropdown-_r_12q_"
  tabindex="-1"
  type="button"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
  >
    arrow_drop_down
  </span>
</button>
`;

exports[`Autocomplete > customizations > should pass through the visibility prop 1`] = `
<button
  aria-label="Clear"
  class="rmd-button rmd-button--icon rmd-interaction-surface rmd-autocomplete__clear-button rmd-autocomplete__clear-button--hover rmd-autocomplete__clear-button--query"
  id="autocomplete-clear-_r_121_"
  tabindex="-1"
  type="button"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    clear
  </span>
</button>
`;

exports[`Autocomplete > customizations > should pass through the visibility prop 2`] = `
<button
  aria-label="Clear"
  class="rmd-button rmd-button--icon rmd-interaction-surface rmd-autocomplete__clear-button"
  id="autocomplete-clear-_r_121_"
  tabindex="-1"
  type="button"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    clear
  </span>
</button>
`;

exports[`Autocomplete > customizations > should pass through the visibility prop 3`] = `
<button
  aria-label="Clear"
  class="rmd-button rmd-button--icon rmd-interaction-surface rmd-autocomplete__clear-button rmd-autocomplete__clear-button--hover"
  id="autocomplete-clear-_r_121_"
  tabindex="-1"
  type="button"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    clear
  </span>
</button>
`;

exports[`Autocomplete > customizations > should pass through the visibility prop 4`] = `
<button
  aria-label="Clear"
  class="rmd-button rmd-button--icon rmd-interaction-surface rmd-autocomplete__clear-button rmd-autocomplete__clear-button--hover rmd-autocomplete__clear-button--query"
  id="autocomplete-clear-_r_121_"
  tabindex="-1"
  type="button"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    clear
  </span>
</button>
`;

exports[`Autocomplete > multiselect > should allow the options to be rendered with checkboxes by enabling the checkboxes prop and preventing the listbox from closing by default once clicked 1`] = `
<div
  aria-label="Fruits"
  aria-multiselectable="true"
  class="rmd-menu rmd-menu--elevated"
  id="autocomplete-listbox-_r_vl_"
  role="listbox"
  style="position: fixed; transform-origin: 50% 0; left: 16px; top: 0px; min-width: 0px;"
  tabindex="-1"
>
  <ul
    class="rmd-list"
    role="none"
  >
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_vs_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Apple
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_vu_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Apricot
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_100_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Banana
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_102_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Blueberry
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_104_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Cranberry
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_106_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Kiwi
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_108_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Mango
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_10a_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Orange
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_10c_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Peach
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_10e_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Plum
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_10g_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Strawberry
      </span>
    </li>
  </ul>
</div>
`;

exports[`Autocomplete > multiselect > should allow the options to be rendered with checkboxes by enabling the checkboxes prop and preventing the listbox from closing by default once clicked 2`] = `
<div
  aria-label="Fruits"
  aria-multiselectable="true"
  class="rmd-menu rmd-menu--elevated"
  id="autocomplete-listbox-_r_vl_"
  role="listbox"
  style="position: fixed; transform-origin: 50% 0; left: 16px; top: 0px; min-width: 0px;"
  tabindex="-1"
>
  <ul
    class="rmd-list"
    role="none"
  >
    <li
      aria-selected="true"
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon rmd-option--selected"
      id="option-_r_vs_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box
      </span>
      <span
        class="rmd-list-item__text"
      >
        Apple
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_vu_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Apricot
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_100_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Banana
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_102_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Blueberry
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_104_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Cranberry
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_106_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Kiwi
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_108_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Mango
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_10a_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Orange
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_10c_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Peach
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_10e_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Plum
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_10g_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check_box_outline_blank
      </span>
      <span
        class="rmd-list-item__text"
      >
        Strawberry
      </span>
    </li>
  </ul>
</div>
`;

exports[`Autocomplete > multiselect > should support multiselect behavior by setting the defaultValue to a list and renders inline chips 1`] = `
<input
  aria-activedescendant=""
  aria-autocomplete="list"
  aria-controls="autocomplete-listbox-_r_rf_"
  aria-expanded="false"
  aria-haspopup="listbox"
  autocapitalize="none"
  autocomplete="off"
  class="rmd-text-field rmd-text-field--placeholder-hidden"
  data-testid="container"
  id="autocomplete-_r_re_"
  placeholder=" "
  role="combobox"
  tabindex="0"
  type="text"
  value=""
/>
`;

exports[`Autocomplete > multiselect > should support multiselect behavior by setting the defaultValue to a list and renders inline chips 2`] = `
<input
  aria-activedescendant=""
  aria-autocomplete="list"
  aria-controls="autocomplete-listbox-_r_rf_"
  aria-expanded="false"
  aria-haspopup="listbox"
  autocapitalize="none"
  autocomplete="off"
  class="rmd-text-field rmd-text-field--placeholder-hidden"
  data-testid="container"
  id="autocomplete-_r_re_"
  placeholder=" "
  role="combobox"
  tabindex="0"
  type="text"
  value=""
/>
`;

exports[`Autocomplete > should allow the CircularProgress bar props to be configured with loadingProps 1`] = `
<span
  aria-labelledby="label-id"
  aria-valuemax="100"
  aria-valuemin="0"
  class="rmd-circular-progress rmd-circular-progress--centered rmd-primary-color custom-class-name"
  id="circular-progress-_r_70_"
  role="progressbar"
>
  <svg
    class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
    viewBox="0 0 66 66"
  >
    <circle
      class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
      cx="33"
      cy="33"
      r="30"
    />
  </svg>
</span>
`;

exports[`Autocomplete > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-right rmd-autocomplete rmd-autocomplete--cb rmd-autocomplete--db"
  data-testid="container"
>
  <input
    aria-activedescendant=""
    aria-autocomplete="list"
    aria-controls="autocomplete-listbox-_r_1_"
    aria-expanded="false"
    aria-haspopup="listbox"
    autocapitalize="none"
    autocomplete="off"
    class="rmd-text-field rmd-text-field--placeholder-hidden"
    id="autocomplete-_r_0_"
    placeholder=" "
    role="combobox"
    tabindex="0"
    type="text"
    value=""
  />
  <label
    class="rmd-label rmd-label--floating"
    for="autocomplete-_r_0_"
  >
    Field
  </label>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-box rmd-box--gap rmd-box--wrap rmd-autocomplete__right-addon rmd-background-container"
  >
    <button
      aria-label="Clear"
      class="rmd-button rmd-button--icon rmd-interaction-surface rmd-autocomplete__clear-button rmd-autocomplete__clear-button--hover rmd-autocomplete__clear-button--query"
      id="autocomplete-clear-_r_5_"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        clear
      </span>
    </button>
    <button
      aria-controls="autocomplete-_r_0_"
      aria-expanded="false"
      aria-label="Fruits"
      class="rmd-button rmd-button--icon rmd-interaction-surface rmd-autocomplete__dropdown-button"
      id="autocomplete-dropdown-_r_6_"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
      >
        arrow_drop_down
      </span>
    </button>
  </span>
</div>
`;

exports[`Autocomplete > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-right rmd-autocomplete rmd-autocomplete--cb rmd-autocomplete--db custom-class-name"
  data-testid="container"
  style="color: white;"
>
  <input
    aria-activedescendant=""
    aria-autocomplete="list"
    aria-controls="autocomplete-listbox-_r_1_"
    aria-expanded="false"
    aria-haspopup="listbox"
    autocapitalize="none"
    autocomplete="off"
    class="rmd-text-field rmd-text-field--placeholder-hidden"
    id="autocomplete-_r_0_"
    placeholder=" "
    role="combobox"
    tabindex="0"
    type="text"
    value=""
  />
  <label
    class="rmd-label rmd-label--floating"
    for="autocomplete-_r_0_"
  >
    Field
  </label>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-box rmd-box--gap rmd-box--wrap rmd-autocomplete__right-addon rmd-background-container"
  >
    <button
      aria-label="Clear"
      class="rmd-button rmd-button--icon rmd-interaction-surface rmd-autocomplete__clear-button rmd-autocomplete__clear-button--hover rmd-autocomplete__clear-button--query"
      id="autocomplete-clear-_r_5_"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        clear
      </span>
    </button>
    <button
      aria-controls="autocomplete-_r_0_"
      aria-expanded="false"
      aria-label="Fruits"
      class="rmd-button rmd-button--icon rmd-interaction-surface rmd-autocomplete__dropdown-button"
      id="autocomplete-dropdown-_r_6_"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
      >
        arrow_drop_down
      </span>
    </button>
  </span>
</div>
`;

exports[`Autocomplete > should attempt to pull menu item props from the options 1`] = `
<div
  aria-label="Fruits"
  class="rmd-menu rmd-menu--elevated"
  id="autocomplete-listbox-_r_8p_"
  role="listbox"
  style="position: fixed; transform-origin: 50% 0; left: 16px; top: 0px; min-width: 0px;"
  tabindex="-1"
>
  <ul
    class="rmd-list"
    role="none"
  >
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-_r_90_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Apple
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-_r_92_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Apricot
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-_r_94_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Banana
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-_r_96_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Blueberry
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-_r_98_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Cranberry
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-_r_9a_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Kiwi
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-_r_9c_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Mango
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      aria-disabled="true"
      class="rmd-list-item rmd-list-item--extra-large rmd-list-item--disabled-color rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-_r_9e_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Orange
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-_r_9g_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Peach
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-_r_9i_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Plum
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-_r_9k_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Strawberry
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`Autocomplete > should be able to render a CircularProgress bar when the loading prop is enabled 1`] = `
<span
  aria-label="Loading"
  aria-valuemax="100"
  aria-valuemin="0"
  class="rmd-circular-progress rmd-circular-progress--centered"
  id="circular-progress-_r_6q_"
  role="progressbar"
>
  <svg
    class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
    viewBox="0 0 66 66"
  >
    <circle
      class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
      cx="33"
      cy="33"
      r="30"
    />
  </svg>
</span>
`;
